# RaspberryPi-Matura

./: CMakeLists.txt  README.md
inc/: checkboxes.hpp  examplebutton.hpp  franzboard.h  gpio.hpp  lcd.hpp  servermain.hpp  serverthr.hpp  serverui.hpp  wcollection.hpp
src/: checkboxes.cpp  examplebutton.cpp  gpio.cpp  lcd.cpp  main.cpp  servermain.cpp  serverthr.cpp  serverui.cpp  wcollection.cpp
